--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,34 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .container {
-  display: flex;
-  justify-content: center;
   padding: 10px;
   font-size: 26px;
 }
 
+h2.header {
+  display: flex;
+  justify-content: center;
+}
+
+p.header {
+  display: flex;
+  justify-content: center;
+}
+
+.actor-input {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
